@@ -1,6 +1,9 @@
 v1.3.1 - TBD
   No longer changes Music Box track instrument when you set notes.
    - Change track instrument by clicking the instrument button beside each track.
+  Fix warnings in console log relating to inaccessible block loot table entries.
+   - Also fixes not being able to silk-touch Gem Ore blocks.
+   - Only in Minecraft 1.14 and 1.15 versions.
 
 
 
